--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "body-parser": "^1.18.3",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "itk": "^9.3.2",
         "jquery": "^3.3.1",
         "jsdom": "^13.0.0",
         "reload": "^2.3.1"
