--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "itk": "^9.3.2",
         "jquery": "^3.3.1",
         "jsdom": "^13.0.0",
-        "reload": "^2.3.1"
+        "reload": "^2.3.1",
+        "vtk.js": "^8.3.15"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "kw-web-suite": "^8.0.0"
+    }
 }
