--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "",
-        "start": "nodemon src/index.js"
+        "start": "node src/index.js"
     },
     "keywords": [],
     "author": "",
