--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "",
-        "start": "node src/index.js",
+        "start": "nodemon src/index.js",
         "build": "webpack --progress --colors --mode development",
         "build:release": "webpack --progress --colors --mode production",
         "commit": "git cz",
@@ -18,6 +18,7 @@
         "body-parser": "^1.18.3",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
+        "image-filter-threshold": "^2.0.1",
         "itk": "^9.3.2",
         "jquery": "^3.3.1",
         "jsdom": "^13.0.0",
