--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "",
-        "start": "src/index.js",
+        "start": "nodemon src/index.js",
         "build": "webpack --progress --colors --mode development",
         "build:release": "webpack --progress --colors --mode production",
         "commit": "git cz",
