--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "itk": "^9.3.2",
         "jquery": "^3.3.1",
         "jsdom": "^13.0.0",
+        "nodemon": "^2.0.2",
         "reload": "^2.3.1",
         "vtk.js": "^8.3.15"
     },
